ndb - bug#40709   Yet another fix, this time in ha_ndbcluster   make sure that fields in partioning function   are correctly marked using setPartitionKey(TRUE)